# Computer-Graphics-I-Theoretical-Assignment-3

./: .gitignore  CMakeLists.txt  clipplane.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  openglview.cpp  openglview.h  renderstate.h  shader.cpp  shader.h  trianglemesh.cpp  trianglemesh.h  uebung_03.sln  uebung_03.slnx  uebung_03.vcxproj  uebung_03.vcxproj.filters  utilities.cpp  utilities.h  vec3.h
Shader/: bump.frag  bump.vert  skybox.frag  skybox.vert
